if(USE_HEMELB_DEBUGGER)
	if(APPLE)
		set(debugger_implementation OSX/OsxDebugger.cc common/ActiveDebugger.cc)
	elseif(UNIX)
		set(debugger_implementation linux/LinuxDebugger.cc common/ActiveDebugger.cc)
	else()
		message("No hemelb built-in debugger available for system ${CMAKE_SYSTEM_NAME}")
		set(debugger_implementation none/NullDebugger.cc)
	endif()
else()
	set(debugger_implementation none/NullDebugger.cc)
endif()
add_library(hemelb_debug Debugger.cc ${debugger_implementation})
#No debugging for now - pending platform dependence