add_library(hemelb_extraction GeometrySelector.cc 
StraightLineGeometrySelector.cc LocalPropertyOutput.cc IterableDataSource.cc
PlaneGeometrySelector.cc PropertyActor.cc PropertyWriter.cc SnapshotParser.cc 
WholeGeometrySelector.cc LbDataSourceIterator.cc GeometrySurfaceSelector.cc 
ArbitrarySiteListIterableDataSource.cc)
