add_library(hemelb_steering
	# steering switching for later
	basic/ClientConnection.cc
	basic/HttpPost.cc
	basic/ImageSendComponent.cc
	basic/Network.cc
	basic/SimulationParameters.cc
	basic/SteeringComponent.cc
	#common/Steerer.cc
	common/SteeringComponent.cc
	#common/Tags.cc
	#none/ClientConnection.cc
	#none/ImageSendComponent.cc
	#none/Network.cc
	#none/SteeringComponent.cc
	 )